# crypto-breakout-scanner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  run-scanner.cmd
.github/workflows/: scanner.yml
src/breakout_scanner/: __init__.py  alerts.py  backtest.py  cli.py  config.py  detector.py  indicators.py  levels.py  market.py  models.py  paper.py  risk.py  scanner.py  storage.py
tests/: test_alerts.py  test_detector.py  test_paper.py  test_risk.py  test_storage.py
