[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-breakout-scanner"
version = "0.1.0"
description = "Closed-candle Bybit linear USDT breakout/retest scanner and backtester"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.10,<4",
  "pandas>=2.2,<3",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9", "pytest-asyncio>=0.23,<1"]

[project.scripts]
breakout-scanner = "breakout_scanner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/breakout_scanner"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
